# research-assistant-rag

./: .gitignore  Makefile  compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: arxiv_paper_ingestion.py  hello_world_dag.py
airflow/dags/arxiv_ingestion/: tasks.py
notebooks/: opensearch_test.ipynb  setup.ipynb  week2.ipynb  week2_arxiv_integration.ipynb
src/: config.py  dependencies.py  exceptions.py  main.py
src/db/: factory.py  interface.py  postgresql.py
src/models/: paper.py
src/repositories/: paper.py
src/routers/: ping.py
src/schemas/api/: health.py
src/schemas/arxiv/: paper.py
src/schemas/pdf_parser/: models.py
src/services/: metadata_fetcher.py
src/services/arxiv/: client.py  factory.py
src/services/opensearch/: client.py  factory.py  index_config.py  query_builder.py
src/services/pdf_parser/: docling.py  factory.py  parser.py
